--- a/index.html
+++ b/index.html
@@ -10,47 +10,51 @@
 <body>
     <form name="formMain">
         <fieldset id="hotAndCold">
-            <legend>Starting Temperature (Hot & Cold)</legend>
+            <legend>Click on your Starting Temperature (Hot & Cold)</legend>
             <label for="baseTempC2">-2
                 <input type="radio" id="baseTempC2" name="baseTemp" value="-2" checked>
-                <img src="./img/baseTempCold2.png">
+                <img class="debuff" src="./img/baseTempCold2.png">
+                <img class="gauge" src="./img/baseTempCold2gauge.png">
             </label>          
             <label for="baseTempC1">-1
                 <input type="radio" id="baseTempC1" name="baseTemp" value="-1">
-                <img src="./img/baseTempCold1.png">
+                <img class="debuff" src="./img/baseTempCold1.png">
+                <img class="gauge" src="./img/baseTempCold1gauge.png">
             </label>   
             <label for="baseTempH1">+1
                 <input type="radio" id="baseTempH1" name="baseTemp" value="1">
-                <img src="./img/baseTempHot1.png">
+                <img class="debuff" src="./img/baseTempHot1.png">
+                <img class="gauge" src="./img/baseTempHot1gauge.png">
             </label>   
             <label for="baseTempH2">+2
                 <input type="radio" id="baseTempH2" name="baseTemp" value="2">
-                <img src="./img/baseTempHot2.png">
+                <img class="debuff" src="./img/baseTempHot2.png">
+                <img class="gauge" src="./img/baseTempHot2gauge.png">
             </label>   
         </fieldset>  
         <fieldset id="hotColdBrand">
             <legend>Hot/Cold Brand</legend>
             <label for="brandC2">-2
                 <input type="radio" id="brandC2" name="brand" value="-2" checked>
-                <img src="./img/ColdBrand2.png">
+                <img class="debuff" src="./img/ColdBrand2.png">
             </label>          
             <label for="brandC1">-1
                 <input type="radio" id="brandC1" name="brand" value="-1">
-                <img src="./img/ColdBrand1.png">
+                <img class="debuff" src="./img/ColdBrand1.png">
             </label>      
             <label for="brandH1">+1
                 <input type="radio" id="brandH1" name="brand" value="1">
-                <img src="./img/HotBrand1.png">
+                <img class="debuff" src="./img/HotBrand1.png">
             </label>      
             <label for="brandH2">+2
                 <input type="radio" id="brandH2" name="brand" value="2">
-                <img src="./img/HotBrand2.png">
+                <img class="debuff" src="./img/HotBrand2.png">
             </label>      
         </fieldset>
         
     </form>
 
-    <div>
+    <div class="result">
         <p id="result">Result: </p>
         <br>
         <br>
